Agregar botones de navegación

--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
 	</head>
 	<body>
 		<div id="container">
+			<nav>
+				<button><img src="" alt=""><span>Inicio</span></button>
+				<button><img src="" alt=""><span>Menú</span></button>
+				<button><img src="" alt=""><span>Ubicación</span></button>
+				<button><img src="" alt=""><span>Reseñas/Contacto</span></button>
+				button><img src="" alt=""><span>Nosotros</span></button>
+			</nav>
 			<header>
 				<img src="assets/icons/menu-icon.svg" alt="Menu Icon">
 				<span>Estación del Sabor</span>
