Arreglar botón de la barra de navegación

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 				<button><img src="./assets/icons/nav/menu-icon.svg" alt="Ícono de menú"><span>Menú</span></button>
 				<button><img src="./assets/icons/nav/location-icon.svg" alt="Ícono de ubicación"><span>Ubicación</span></button>
 				<button><img src="./assets/icons/nav/reviews-icon.svg" alt="Ícono de reseñas"><span>Reseñas/Contacto</span></button>
-				button><img src="./assets/icons/nav/aboutus-icon.svg" alt="Ícono de más información"><span>Nosotros</span></button>
+				<button><img src="./assets/icons/nav/aboutus-icon.svg" alt="Ícono de más información"><span>Nosotros</span></button>
 			</nav>
 			<header>
 				<img src="assets/icons/menu-icon.svg" alt="Ícono de menú de navegación">
