--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 ﻿<!DOCTYPE html>
 <html lang="es">
 	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Estación del Sabor</title>
 		<link rel="stylesheet" href="styles.css">
 		<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
@@ -10,16 +12,28 @@
 	<body>
 		<div id="container">
 			<nav>
-				<button><img src="./assets/icons/nav/home-icon.svg" alt="Ícono de inicio"><span>Inicio</span></button>
-				<button><img src="./assets/icons/nav/menu-icon.svg" alt="Ícono de menú"><span>Menú</span></button>
-				<button><img src="./assets/icons/nav/location-icon.svg" alt="Ícono de ubicación"><span>Ubicación</span></button>
-				<button><img src="./assets/icons/nav/reviews-icon.svg" alt="Ícono de reseñas"><span>Reseñas/Contacto</span></button>
-				<button><img src="./assets/icons/nav/aboutus-icon.svg" alt="Ícono de más información"><span>Nosotros</span></button>
+				<button class="nav-button"><img src="./assets/icons/nav/home-icon.svg" alt="Ícono de inicio" class="nav-icon"><span class="nav-title">Inicio</span></button>
+				<button class="nav-button"><img src="./assets/icons/nav/menu-icon.svg" alt="Ícono de menú" class="nav-icon"><span class="nav-title">Menú</span></button>
+				<button class="nav-button"><img src="./assets/icons/nav/location-icon.svg" alt="Ícono de ubicación" class="nav-icon"><span class="nav-title">Ubicación</span></button>
+				<button class="nav-button"><img src="./assets/icons/nav/reviews-icon.svg" alt="Ícono de reseñas" class="nav-icon"><span class="nav-title">Reseñas/Contacto</span></button>
+				<button class="nav-button"><img src="./assets/icons/nav/aboutus-icon.svg" alt="Ícono de más información" class="nav-icon"><span class="nav-title">Nosotros</span></button>
 			</nav>
 			<header>
 				<img src="assets/icons/menu-icon.svg" alt="Ícono de menú de navegación">
 				<span>Estación del Sabor</span>
 			</header>
+			<main>
+				<article>
+					<h2>Probá nuestro menú veraniego</h2>
+				</article>
+				<article>
+					<h2>Cambiamos con cada estación</h2>
+					<p>Contamos con un menú dinámico el cual se adapta a las condiciones de cada estación del año.</p>
+				</article>
+			</main>
+			<footer>
+				<h3>Estación del Sabor</h3>
+			</footer>
 		</div>
 	</body>
 </html>
