Agregar botones a las tarjetas de la página principal

--- a/index.html
+++ b/index.html
@@ -24,11 +24,13 @@
 			</header>
 			<main>
 				<article>
-					<h2>Probá nuestro menú veraniego</h2>
+					<h2><span>Probá nuestro menú veraniego</span><img src="" alt="Ícono de una sombrilla"></h2>
+					<button><span>Ver más</span><img src="" alt="Ícono de una flecha hacia la derecha"></button>
 				</article>
 				<article>
-					<h2>Cambiamos con cada estación</h2>
+					<h2><span>Cambiamos con cada estación</span><img src="" alt="Ícono de una flecha circular"></h2>
 					<p>Contamos con un menú dinámico el cual se adapta a las condiciones de cada estación del año.</p>
+					<button><span>Todos los menús</span><img src="" alt="Ícono de una flecha hacia la derecha"></button>
 				</article>
 			</main>
 			<footer>
