Agregar ícono al footer

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 				</article>
 			</main>
 			<footer>
-				<h3>Estación del Sabor</h3>
+				<h3><img src="" alt="Ícono de una taza"><span>Estación del Sabor</span></h3>
 			</footer>
 		</div>
 	</body>
