--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
 			<main>
 				<article>
 					<h2><span>Probá nuestro menú veraniego</span><img src="" alt="Ícono de una sombrilla"></h2>
-					<button><span>Ver más</span><img src="" alt="Ícono de una flecha hacia la derecha"></button>
+					<button class="more-button"><span>Ver más</span><img src="" alt="Ícono de una flecha hacia la derecha"></button>
 				</article>
 				<article>
 					<h2><span>Cambiamos con cada estación</span><img src="" alt="Ícono de una flecha circular"></h2>
 					<p>Contamos con un menú dinámico el cual se adapta a las condiciones de cada estación del año.</p>
-					<button><span>Todos los menús</span><img src="" alt="Ícono de una flecha hacia la derecha"></button>
+					<button class="more-button"><span>Todos los menús</span><img src="" alt="Ícono de una flecha hacia la derecha"></button>
 				</article>
 			</main>
 			<footer>
