--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
 				<span>Estación del Sabor</span>
 			</header>
 			<main>
-				<article>
-					<h2><span>Probá nuestro menú veraniego</span><img src="" alt="Ícono de una sombrilla"></h2>
+				<article class="card promo-card">
+					<h2 class="card-title"><span>Probá nuestro menú veraniego</span><img src="" alt="Ícono de una sombrilla"></h2>
 					<button class="more-button"><span>Ver más</span><img src="" alt="Ícono de una flecha hacia la derecha"></button>
 				</article>
-				<article>
-					<h2><span>Cambiamos con cada estación</span><img src="" alt="Ícono de una flecha circular"></h2>
-					<p>Contamos con un menú dinámico el cual se adapta a las condiciones de cada estación del año.</p>
+				<article class="card info-card">
+					<h2 class="card-title"><span>Cambiamos con cada estación</span><img src="" alt="Ícono de una flecha circular"></h2>
+					<p class="card-info">Contamos con un menú dinámico el cual se adapta a las condiciones de cada estación del año.</p>
 					<button class="more-button"><span>Todos los menús</span><img src="" alt="Ícono de una flecha hacia la derecha"></button>
 				</article>
 			</main>
