Usar flexbox para que el footer quede fijo contra el borde inferior

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 				<button class="nav-button"><img src="./assets/icons/nav/aboutus-icon.svg" alt="Ícono de más información" class="nav-icon"><span class="nav-title">Nosotros</span></button>
 			</nav>
 			<header>
-				<img src="assets/icons/menu-icon.svg" alt="Ícono de menú de navegación">
+				<img src="assets/icons/menu-icon.svg" alt="Ícono de menú de navegación" class="header-icon">
 				<span>Estación del Sabor</span>
 			</header>
 			<main>
