--- a/index.html
+++ b/index.html
@@ -10,11 +10,26 @@
 	<body>
 		<div id="container">
 			<nav>
-				<button><img src="./assets/icons/nav/home-icon.svg" alt="Ícono de inicio"><span>Inicio</span></button>
-				<button><img src="./assets/icons/nav/menu-icon.svg" alt="Ícono de menú"><span>Menú</span></button>
-				<button><img src="./assets/icons/nav/location-icon.svg" alt="Ícono de ubicación"><span>Ubicación</span></button>
-				<button><img src="./assets/icons/nav/reviews-icon.svg" alt="Ícono de reseñas"><span>Reseñas/Contacto</span></button>
-				button><img src="./assets/icons/nav/aboutus-icon.svg" alt="Ícono de más información"><span>Nosotros</span></button>
+				<button>
+					<img src="./assets/icons/nav/home-icon.svg" alt="Ícono de inicio">
+					<span>Inicio</span>
+				</button>
+				<button>
+					<img src="./assets/icons/nav/menu-icon.svg" alt="Ícono de menú">
+					<span>Menú</span>
+				</button>
+				<button>
+					<img src="./assets/icons/nav/location-icon.svg" alt="Ícono de ubicación">
+					<span>Ubicación</span>
+				</button>
+				<button>
+					<img src="./assets/icons/nav/reviews-icon.svg" alt="Ícono de reseñas">
+					<span>Reseñas/Contacto</span>
+				</button>
+				<button>
+					<img src="./assets/icons/nav/aboutus-icon.svg" alt="Ícono de más información">
+					<span>Nosotros</span>
+				</button>
 			</nav>
 			<header>
 				<img src="assets/icons/menu-icon.svg" alt="Ícono de menú de navegación">
