Cambiar el nombre de una clase CSS por uno  más claro

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           <span>Cambiamos con cada estación</span>
           <img src="./assets/icons/change.svg" alt="Ícono de una flecha circular" class="icon">
         </h2>
-        <p class="card-info">Contamos con un menú dinámico el cual se adapta a las condiciones de cada estación del año.</p>
+        <p class="card-text">Contamos con un menú dinámico el cual se adapta a las condiciones de cada estación del año.</p>
         <button class="more-button">
           <span>Todos los menús</span>
           <img src="./assets/icons/arrow-right.svg" alt="Ícono de una flecha hacia la derecha" class="icon">
