Agregar imagen de la promoción de verano

--- a/index.html
+++ b/index.html
@@ -45,6 +45,12 @@
           <span>Probá nuestro menú veraniego</span>
           <img src="./assets/icons/promo/summer-umbrella.svg" alt="Ícono de una sombrilla" class="icon">
         </h2>
+        <div class="card inner-card" id="verano">
+          <div class="inner-card-text">
+            <span>Especial verano</span>
+            <span class="inner-card-title">Frappé</span>
+          </div>
+        </div>
         <button class="more-button">
           <span>Ver más</span>
           <img src="./assets/icons/arrow-right.svg" alt="Ícono de una flecha hacia la derecha" class="icon">
@@ -56,6 +62,7 @@
           <img src="./assets/icons/change.svg" alt="Ícono de una flecha circular" class="icon">
         </h2>
         <p class="card-text">Contamos con un menú dinámico el cual se adapta a las condiciones de cada estación del año.</p>
+        <div class="card inner-card"></div>
         <button class="more-button">
           <span>Todos los menús</span>
           <img src="./assets/icons/arrow-right.svg" alt="Ícono de una flecha hacia la derecha" class="icon">
