--- a/index.html
+++ b/index.html
@@ -119,14 +119,15 @@
               <img src="./assets/images/promo/spring.png" />
             </div>
           </div>
-          <button class="more-button">
-            <span>Todos los menús</span>
+          <a href="#" class="more-button">
+            <span >Todos los menús</span>
             <img
               src="./assets/icons/arrow-right.svg"
               alt="Ícono de una flecha hacia la derecha"
               class="icon"
+
             />
-          </button>
+          </a>
         </article>
       </main>
       <footer>
