--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
               class="icon"
             />
           </h2>
-          <div class="card inner-promo" id="verano">
+          <div class="inner-promo" id="verano">
             <div class="inner-card-text">
               <span>Especial verano</span>
               <span class="inner-card-title">Frappé</span>
