--- a/index.html
+++ b/index.html
@@ -8,7 +8,26 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Zilla+Slab:wght@400;600;700&display=swap"
       rel="stylesheet"
+     
     />
+    <style>
+      @keyframes appear{
+        from{
+          opacity: 0;
+          transform:scale(0.3)
+        }
+        to{
+          opacity: 1;
+          transform:scale(1)
+        }
+      }
+      .promo-card , .info-card  {
+        animation: appear  linear;
+        animation-timeline:view();
+        animation-range:entry 0% cover 40%;
+        
+      }
+    </style>
   </head>
 
   <body>
@@ -63,7 +82,7 @@
         />
         <span>Estación del Sabor</span>
       </header>
-      <main>
+      <main class="main">
         <article class="card promo-card">
           <h2 class="card-title">
             <span>Probá nuestro menú veraniego</span>
