--- a/index.html
+++ b/index.html
@@ -82,6 +82,48 @@
         />
         <span>Estación del Sabor</span>
       </header>
+      <nav>
+        <button class="nav-button">
+          <img
+            src="./assets/icons/nav/home-icon.svg"
+            alt="Ícono de inicio"
+            class="icon nav-icon"
+          />
+          <span class="nav-title">Inicio</span>
+        </button>
+        <button class="nav-button">
+          <img
+            src="./assets/icons/nav/menu-icon.svg"
+            alt="Ícono de menú"
+            class="icon nav-icon"
+          />
+          <span class="nav-title">Menú</span>
+        </button>
+        <button class="nav-button">
+          <img
+            src="./assets/icons/nav/location-icon.svg"
+            alt="Ícono de ubicación"
+            class="icon nav-icon"
+          />
+          <span class="nav-title">Ubicación</span>
+        </button>
+        <button class="nav-button">
+          <img
+            src="./assets/icons/nav/reviews-icon.svg"
+            alt="Ícono de reseñas"
+            class="icon nav-icon"
+          />
+          <span class="nav-title">Reseñas</span>
+        </button>
+        <button class="nav-button">
+          <img
+            src="./assets/icons/nav/aboutus-icon.svg"
+            alt="Ícono de más información"
+            class="icon nav-icon"
+          />
+          <span class="nav-title">Nosotros</span>
+        </button>
+      </nav>
       <main class="main">
         <article class="card promo-card">
           <h2 class="card-title">
