--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <span>Estación del Sabor</span>
       </header>
       <nav>
-        <a class="nav-button" href="/menu.html">
+        <a class="nav-button" href="/index.html">
           <img
             src="./assets/icons/nav/home-icon.svg"
             alt="Ícono de inicio"
@@ -31,14 +31,14 @@
           />
           <span class="nav-title">Inicio</span>
         </a>
-        <button class="nav-button">
+        <a class="nav-button" href="./menu.html">
           <img
             src="./assets/icons/nav/menu-icon.svg"
             alt="Ícono de menú"
             class="icon nav-icon"
           />
           <span class="nav-title">Menú</span>
-        </button>
+        </a>
         <button class="nav-button">
           <img
             src="./assets/icons/nav/location-icon.svg"
