--- a/menu.html
+++ b/menu.html
@@ -23,22 +23,22 @@
         <span>Estación del Sabor</span>
       </header>
       <nav>
-        <button class="nav-button">
+        <a class="nav-button" href="/index.html">
           <img
             src="./assets/icons/nav/home-icon.svg"
             alt="Ícono de inicio"
             class="icon nav-icon"
           />
           <span class="nav-title">Inicio</span>
-        </button>
-        <button class="nav-button">
+        </a>
+        <a class="nav-button" href="/menu.html">
           <img
             src="./assets/icons/nav/menu-icon.svg"
             alt="Ícono de menú"
             class="icon nav-icon"
           />
           <span class="nav-title">Menú</span>
-        </button>
+        </a>
         <button class="nav-button">
           <img
             src="./assets/icons/nav/location-icon.svg"
