Arreglar disposición del footer

--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
         </article>
       </main>
       <footer>
+        <div id="footer-title"></div>
         <img src="assets/images/logo.png" alt="logo de estacion del sabor"
           class="footer-logo"> 
         <h3>
