Arreglar disposición y márgenes de los títulos

--- a/index.html
+++ b/index.html
@@ -83,15 +83,14 @@
               <span class="inner-card-title">Frappé</span>
             </div>
           </div>
-          <button class="more-button">
-            <a href="pagina2.html" class="page-two">
-            <span >Ver más</span>
+          <a href="#" class="more-button">
+            <span>Ver más</span>
             <img
               src="./assets/icons/arrow-right.svg"
               alt="Ícono de una flecha hacia la derecha"
               class="icon"
             />
-          </button>
+          </a>
         </article>
         <article class="card info-card">
           <h2 class="card-title">
@@ -121,7 +120,7 @@
             </div>
           </div>
           <a href="#" class="more-button">
-            <span >Todos los menús</span>
+            <span>Todos los menús</span>
             <img
               src="./assets/icons/arrow-right.svg"
               alt="Ícono de una flecha hacia la derecha"
