--- a/menu.html
+++ b/menu.html
@@ -15,12 +15,14 @@
   <body>
     <div id="container">
       <header>
-        <img
+        <h1 id="header-title">
+          <img
           src="assets/icons/menu-icon.svg"
           alt="Ícono de menú de navegación"
-          class="icon header-icon"
-        />
+          class="icon header-icon" >
+        
         <span>Estación del Sabor</span>
+        
       </header>
       <nav>
         <a class="nav-button" href="/index.html">
@@ -31,7 +33,7 @@
           />
           <span class="nav-title">Inicio</span>
         </a>
-        <a class="nav-button" href="/menu.html">
+        <a class="nav-button" href="./menu.html">
           <img
             src="./assets/icons/nav/menu-icon.svg"
             alt="Ícono de menú"
@@ -115,12 +117,12 @@
         </article>
       </main>
       <footer>
-        <h3>
+        <h3>        
           <img
             src="./assets/icons/logo-icon.svg"
             alt="Ícono de una taza"
             class="icon footer-icon"
-          />
+          />          
           <span>Estación del Sabor</span>
         </h3>
         <div id="socials">
@@ -136,8 +138,8 @@
               alt="Logo de Instagram"
               class="icon social-icon"
           /></a>
-          <a href="https://x.com/" target="_blank"
-            ><img
+          <a href="https://x.com/" target="_blank">
+            <img
               src="./assets/icons/socials/x.svg"
               alt="Logo de X/Twitter"
               class="icon social-icon"
