Agregar hipervínculos a la barra de navegación

--- a/location.html
+++ b/location.html
@@ -20,27 +20,27 @@
         <span>Estación del Sabor</span>
 
     </header>
-    <nav>
-      <a class="nav-button" href="/index.html">
-        <img src="./assets/icons/nav/home-icon.svg" alt="Ícono de inicio" class="icon nav-icon" />
-        <span class="nav-title">Inicio</span>
-      </a>
-      <a class="nav-button" href="./menu.html">
-        <img src="./assets/icons/nav/menu-icon.svg" alt="Ícono de menú" class="icon nav-icon" />
-        <span class="nav-title">Menú</span>
-      </a>
-      <button class="nav-button">
-        <img src="./assets/icons/nav/location-icon.svg" alt="Ícono de ubicación" class="icon nav-icon" />
-        <span class="nav-title">Ubicación</span>
-      </button>
-      <button class="nav-button">
-        <img src="./assets/icons/nav/reviews-icon.svg" alt="Ícono de reseñas" class="icon nav-icon" />
-        <span class="nav-title">Reseñas</span>
-      </button>
-      <button class="nav-button">
-        <img src="./assets/icons/nav/aboutus-icon.svg" alt="Ícono de más información" class="icon nav-icon" />
-        <span class="nav-title">Nosotros</span>
-      </button>
+    <nav></nav>
+    <a class="nav-button" href="./index.html">
+      <img src="./assets/icons/nav/home-icon.svg" alt="Ícono de inicio" class="icon nav-icon" />
+      <span class="nav-title">Inicio</span>
+    </a>
+    <a class="nav-button" href="./menu.html">
+      <img src="./assets/icons/nav/menu-icon.svg" alt="Ícono de menú" class="icon nav-icon" />
+      <span class="nav-title">Menú</span>
+    </a>
+    <a class="nav-button" href="./location.html">
+      <img src="./assets/icons/nav/location-icon.svg" alt="Ícono de ubicación" class="icon nav-icon" />
+      <span class="nav-title">Ubicación</span>
+    </a>
+    <a class="nav-button" href="./reviews.html">
+      <img src="./assets/icons/nav/reviews-icon.svg" alt="Ícono de reseñas" class="icon nav-icon" />
+      <span class="nav-title">Reseñas</span>
+    </a>
+    <a class="nav-button" href="./about_us.html">
+      <img src="./assets/icons/nav/aboutus-icon.svg" alt="Ícono de más información" class="icon nav-icon" />
+      <span class="nav-title">Nosotros</span>
+    </a>
     </nav>
     <main class="main"></main>
     <footer>
