--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         
       </header>
       <nav>
-        <a class="nav-button" href="/index.html">
+        <a class="nav-button" href="./index.html">
           <img
             src="./assets/icons/nav/home-icon.svg"
             alt="Ícono de inicio"
@@ -41,30 +41,30 @@
           />
           <span class="nav-title">Menú</span>
         </a>
-        <button class="nav-button">
+        <a class="nav-button" href="./location.html">
           <img
             src="./assets/icons/nav/location-icon.svg"
             alt="Ícono de ubicación"
             class="icon nav-icon"
           />
           <span class="nav-title">Ubicación</span>
-        </button>
-        <button class="nav-button">
+        </a>
+        <a class="nav-button" href="./reviews.html">
           <img
             src="./assets/icons/nav/reviews-icon.svg"
             alt="Ícono de reseñas"
             class="icon nav-icon"
           />
           <span class="nav-title">Reseñas</span>
-        </button>
-        <button class="nav-button">
+        </a>
+        <a class="nav-button" href="./about_us.html">
           <img
             src="./assets/icons/nav/aboutus-icon.svg"
             alt="Ícono de más información"
             class="icon nav-icon"
           />
           <span class="nav-title">Nosotros</span>
-        </button>
+        </a>
       </nav>
       <main class="main">
         <article class="card promo-card">
