--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         </article>
         <article class="card info-card">
           <h2 class="card-title">
-            <span>"Cada estación, un sabor nuevo, cada visita una experincia única"</span>
+            <span>Cada estación, un sabor nuevo, cada visita, una experiencia única</span>
             <img
               src="./assets/icons/change.svg"
               alt="Ícono de una flecha circular"
