Arreglar problemas de merge

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <article class="card info-card">
           <h2 class="card-title">
             <span>Cada estación, un sabor nuevo, cada visita, una experiencia única</span>
-            <img
+            <!--<img
               src="./assets/icons/change.svg"
               alt="Ícono de una flecha circular"
               class="icon"
@@ -118,7 +118,6 @@
             </div>
           </div>
           <a href="#" class="more-button">
-            <span>Todos los menús</span>
             <span>Todos los menús</span>
             <img
               src="./assets/icons/arrow-right.svg"
