Cambiar estilos del menu

--- a/menu.html
+++ b/menu.html
@@ -71,45 +71,45 @@
             <table>
                 <thead>
                     <tr>
-                        <th>Plato</th>
+                        <th>Artículo</th>
                         <th>Precio</th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr>
-                        <td>Café</td>
+                        <td>Elemento</td>
                         <td>$150</td>
                     </tr>
                     <tr>
-                        <td>Té</td>
+                        <td>Elemento</td>
                         <td>$120</td>
                     </tr>
                     <tr>
-                        <td>Jugo de naranja</td>
+                        <td>Elemento</td>
                         <td>$200</td>
                     </tr>
                     <tr>
-                        <td>Sandwich de jamón y queso</td>
+                        <td>Elemento</td>
                         <td>$350</td>
                     </tr>
                     <tr>
-                        <td>Ensalada cesar</td>
+                        <td>Elemento</td>
                         <td>$400</td>
                     </tr>
                     <tr>
-                        <td>Pizza</td>
+                        <td>Elemento</td>
                         <td>$500</td>
                     </tr>
                     <tr>
-                        <td>Hamburguesa</td>
+                        <td>Elemento</td>
                         <td>$600</td>
                     </tr>
                     <tr>
-                        <td>Pasta</td>
+                        <td>Elemento</td>
                         <td>$450</td>
                     </tr>
                     <tr>
-                        <td>Postre</td>
+                        <td>Elemento</td>
                         <td>$250</td>
                     </tr>
                 </tbody>
