Añadir página de reseñas

--- a/reviews.html
+++ b/reviews.html
@@ -42,7 +42,37 @@
         <span class="nav-title">Nosotros</span>
       </a>
     </nav>
-    <main class="main"></main>
+    <main class="main">
+      <div class="card reviews-card">
+        <h1>Reseñas</h1>
+        <form class="review-input">
+          <div class="inline">
+            <span>Danos tu valoración:</span>
+            <div class="stars">
+              <input type="number" min="1" max="10" />
+              <span>/10</span>
+            </div>
+            
+          </div>
+          <textarea rows="5"></textarea>
+          <button type="button">Aceptar</button>
+        </form>
+        <div class="review-list">
+          <div class="review">
+            <span><strong>Juan</strong> (10/10)</span>
+            <span>Muy buen lugar!</span>
+          </div>
+          <div class="review">
+            <span><strong>María</strong> (9/10)</span>
+            <span>Recomendado</span>
+          </div>
+          <div class="review">
+            <span><strong>Pedro</strong> (10/10)</span>
+            <span>El frapé estaba muy rico!</span>
+          </div>
+        </div>
+      </div>
+    </main>
     <footer>
       <h3>
         <img src="./assets/icons/logo-icon.svg" alt="Ícono de una taza" class="icon footer-icon" />
