--- a/about_us.html
+++ b/about_us.html
@@ -42,7 +42,22 @@
         <span class="nav-title">Nosotros</span>
       </a>
     </nav>
-    <main class="main"></main>
+    <main class="main">
+        <h2 class="acerca">Acerca de Nosotros☕</h2>
+        <div class="acercaDeNosotros">
+          <img src="assets/images/aboutme.webp" alt="imagen">
+
+        </div>
+        <p>La actividad principal de la empresa es proporcionar una experiencia gastronómica cálida y atractiva, con una gama de bebidas y alimentos inspirados en las estaciones del año. Esto incluye la preparación de cafés, postres, pasteles,etc que varían según la temporada.
+        </p>
+
+      
+
+
+
+
+
+    </main>
     <footer>
       <h3>
         <img src="./assets/icons/logo-icon.svg" alt="Ícono de una taza" class="icon footer-icon" />
