Sacar margin de card-text

--- a/index.html
+++ b/index.html
@@ -91,14 +91,7 @@
           </a>
         </article>
         <article class="card info-card">
-          <h2 class="card-title">
-            <span>Cada estación, un sabor nuevo, cada visita, una experiencia única</span>
-            <!--<img
-              src="./assets/icons/change.svg"
-              alt="Ícono de una flecha circular"
-              class="icon"
-            />-->
-          </h2>
+          <span class="card-title">Cada estación, un sabor nuevo, cada visita, una experiencia única</span>
           <p class="card-text">
             Contamos con un menú dinámico el cual se adapta a las condiciones de
             cada estación del año.
