--- a/reviews.html
+++ b/reviews.html
@@ -19,7 +19,7 @@
           alt="Ícono de menú de navegación"
           class="icon header-icon"
         />
-        <span>Estación del Sabor</span>
+        <span>Estación del Sabor - Reseñas</span>
       </header>
       <nav>
         <a class="nav-button" href="./index.html">
