Actualizar estilos para que concuerden con el resto de las páginas

--- a/about_us.html
+++ b/about_us.html
@@ -43,20 +43,16 @@
       </a>
     </nav>
     <main class="main">
+      <div class="card aboutus-card">
         <h2 class="acerca">Acerca de Nosotros☕</h2>
+        <p>La actividad principal de la empresa es proporcionar una experiencia gastronómica cálida y atractiva, con una
+          gama de bebidas y alimentos inspirados en las estaciones del año. Esto incluye la preparación de cafés,
+          postres, pasteles,etc que varían según la temporada.
+        </p>
         <div class="acercaDeNosotros">
           <img src="assets/images/aboutme.webp" alt="imagen">
-
         </div>
-        <p>La actividad principal de la empresa es proporcionar una experiencia gastronómica cálida y atractiva, con una gama de bebidas y alimentos inspirados en las estaciones del año. Esto incluye la preparación de cafés, postres, pasteles,etc que varían según la temporada.
-        </p>
-
-      
-
-
-
-
-
+      </div>
     </main>
     <footer>
       <h3>
