--- a/index.html
+++ b/index.html
@@ -14,13 +14,10 @@
   <body>
     <div id="container">
       <header>
-        <img
-          src="assets/icons/menu-icon.svg"
-          alt="Ícono de menú de navegación"
-          class="icon header-icon"
-        />
-
-        <span>Estación del Sabor</span>
+        <h1 id="header-title">
+          <img src="assets/icons/menu-icon.svg" alt="Ícono de menú de navegación" class="icon header-icon">
+          <span>Estación del Sabor</span>
+        </h1>
       </header>
       <nav>
         <a class="nav-button" href="./index.html">
