--- a/index.html
+++ b/index.html
@@ -118,33 +118,17 @@
         </article>
       </main>
       <footer>
-        <div class="logo">
-          <img
-            src="./assets/icons/logo-icon.svg"
-            alt="Ícono de una taza"
-            class="icon footer-icon"
-          />
+        <h3>
+          <img src="./assets/icons/logo-icon.svg" alt="Ícono de una taza" class="icon footer-icon" />
           <span>Estación del Sabor</span>
-        </div>
+        </h3>
         <div id="socials">
-          <a href="https://www.tiktok.com/" target="_blank"
-            ><img
-              src="./assets/icons/socials/tiktok.svg"
-              alt="Logo de TikTok"
-              class="icon social-icon"
-          /></a>
-          <a href="https://www.instagram.com/" target="_blank"
-            ><img
-              src="./assets/icons/socials/instagram.svg"
-              alt="Logo de Instagram"
-              class="icon social-icon"
-          /></a>
-          <a href="https://x.com/" target="_blank"
-            ><img
-              src="./assets/icons/socials/x.svg"
-              alt="Logo de X/Twitter"
-              class="icon social-icon"
-          /></a>
+          <a href="https://www.tiktok.com/" target="_blank"><img src="./assets/icons/socials/tiktok.svg"
+              alt="Logo de TikTok" class="icon social-icon" /></a>
+          <a href="https://www.instagram.com/" target="_blank"><img src="./assets/icons/socials/instagram.svg"
+              alt="Logo de Instagram" class="icon social-icon" /></a>
+          <a href="https://x.com/" target="_blank"><img src="./assets/icons/socials/x.svg" alt="Logo de X/Twitter"
+              class="icon social-icon" /></a>
         </div>
       </footer>
     </div>
